// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute insurance_proof endpoint edge cases should handle empty hash string 1`] = `
{
  "data": {
    "aum": "661650753212112198971926867105880866744126160826975565909",
    "navDate": 42,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint edge cases should handle negative days remaining 1`] = `
{
  "data": {
    "aum": "394686563145051592141435390537358740558257698705448720389",
    "navDate": -5,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint happy path should return success 1`] = `
{
  "data": {
    "aum": "394686563145051592141435390537358740558257698705448720389",
    "navDate": 42,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint happy path should return success with large days and long hash 1`] = `
{
  "data": {
    "aum": "1545988375484209341616260976040421519733585783394526005407",
    "navDate": 365,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint happy path should return success with zero days remaining 1`] = `
{
  "data": {
    "aum": "2908785631117034402528926244964481318233574544009745473404",
    "navDate": 0,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint happy path should use default endpoint when no endpoint specified 1`] = `
{
  "data": {
    "aum": "394686563145051592141435390537358740558257698705448720389",
    "navDate": 42,
  },
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream failures should handle 401 Unauthorized 1`] = `
{
  "errorMessage": "Provider request failed with status 401: {"error":"Unauthorized"}",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream failures should handle 404 Not Found 1`] = `
{
  "errorMessage": "Provider request failed with status 404: {"error":"Not Found"}",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream failures should handle 429 Rate Limited 1`] = `
{
  "errorMessage": "Provider request failed with status 429: {"error":"Too Many Requests"}",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream failures should handle 500 Internal Server Error 1`] = `
{
  "errorMessage": "Provider request failed with status 500: {"error":"Internal Server Error"}",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream failures should handle 502 Bad Gateway 1`] = `
{
  "errorMessage": "Provider request failed with status 502: {"error":"Bad Gateway"}",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream response validation errors should fail when daysRemaining is missing 1`] = `
{
  "errorMessage": "Response missing required field: daysRemaining",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream response validation errors should fail when hash is missing 1`] = `
{
  "errorMessage": "Response missing required field: hash",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream response validation errors should fail when response data is null 1`] = `
{
  "errorMessage": "Response missing required field: daysRemaining",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint upstream response validation errors should fail when response is empty object 1`] = `
{
  "errorMessage": "Response missing required field: daysRemaining",
  "meta": {
    "adapterName": "T_RIZE_PROOF_OF_INSURANCE",
    "metrics": {
      "feedId": "N/A",
    },
  },
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute insurance_proof endpoint validation errors should fail for invalid endpoint 1`] = `
{
  "error": {
    "message": "Adapter does not have a "invalid_endpoint" endpoint.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 404,
}
`;
